--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,10 @@ footer nav a:hover{
 	padding: 0 .5rem;
 	padding-top: 10px;
 }
+#map{
+	width: 100%;
+	height: 400px;
+}
 
 @media screen and (max-width: 768px){
 	.topnav a:not(:first-child){
