--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,35 @@ textarea{
 	-o-transition: .3s ease;
 	transition: .3s ease;
 }
+.about__container{
+	width: 80%;
+	margin: 50px auto;
+	text-align: center;
+}
+.about__container img{
+	min-width: 100%;
+}
+.about__container h1{
+	margin-top: 50px;
+}
+.about__container p{
+	margin-top: 50px;
+}
+.services{
+	width: 80%;
+	margin: 50px auto;
+	text-align: center;
+}
+.services img{
+	max-width: 100%;
+}
+.services__container{
+	margin-top: 50px;
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-gap: 50px 100px;
+}
+
 
 @media screen and (max-width: 768px){
 	.topnav a:not(:first-child){
@@ -335,5 +364,8 @@ textarea{
 	}
 	.blog-container{
 		width: 20rem;
+	}
+	.services__container{
+		grid-template-columns: auto;
 	}
 }
